# runhelm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  PROPOSAL.md  README.md  TODO.md  docker-compose.yml  index.html  register_workflow.sh
orchestrator/: Cargo.toml  Dockerfile  Dockerfile.dev
orchestrator/openspec/changes/archive/2026-05-01-core-dataflow-architecture/: proposal.md  tasks.md
orchestrator/openspec/changes/executor-implementation/: proposal.md  tasks.md
orchestrator/openspec/changes/executor-implementation/specs/docker-executor/: spec.md
orchestrator/scripts/: setup_aws_dynamodb.sh
orchestrator/src/: main.rs
orchestrator/src/adapters/: aws_storage.rs  docker_executor.rs  env_auth.rs  fake_executor.rs  fake_task_dispatcher.rs  ipc.rs  memory_storage.rs  memory_workflow_queue.rs  mod.rs  sql_storage.rs  task_dispatcher.rs  worker_pool.rs  worker_registry.rs
orchestrator/src/adapters/storage/: memory_storage.rs  mod.rs  sqlite_storage.rs
orchestrator/src/api/: handlers.rs  mod.rs  models.rs  namespace.rs  router.rs
orchestrator/src/core/: engine.rs  engine_tests.rs  function_resolution.rs  function_service.rs  mod.rs  models.rs  namespace.rs  orchestrator.rs  orchestrator_tests.rs  task.rs  util.rs  verifier.rs  worker.rs  workflow_service.rs  workspace_manager.rs
orchestrator/src/core/function/: function_service.rs  mod.rs  models.rs
orchestrator/src/core/workflow/: events.rs  mod.rs  models.rs  state_manager.rs  workflow_service.rs
orchestrator/src/ports/: auth.rs  executor.rs  mod.rs  storage.rs  task_dispatch.rs  workflow_queue.rs
(+210 files in other folders)
